fix extension name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vera",
+    "name": "vera-computer",
     "icon": "images/icon.png",
     "displayName": "Vera Homebrew Computer",
     "description": "Provides language support for the Vera homebrew computer.",
